--- a/Exercício 6/index.html
+++ b/Exercício 6/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css" title="Games Blog">
+    <link rel="stylesheet" href="style.css">
     <title>Cadastro de usuário</title>
 </head>
 <body class="nunito">
